--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3"
+  },
+  "dependencies": {
+    "co": "^4.6.0",
+    "thunkify": "^2.1.2"
   }
 }
